fix topbar z-index

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ p {
     justify-content: space-between;
     background: #FEFEFE;
     padding: 0.3em 3em 0.3em 1em;
+    z-index: 2;
 }
     .topbar_menuIcon {
         display: none;
@@ -427,6 +428,9 @@ p {
 @media only screen and (max-width: 720px) {
     body {
         font-size: 14px;
+    }
+    .banner {
+        height: 65vh;
     }
     .miniGallery_image {
         flex-basis: 100%;
